<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:fitsSystemWindows="false">

    <com.randolabs.ezequiel.camera2.camera.CameraSourcePreview
        android:id="@+id/mPreview"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.randolabs.ezequiel.camera2.camera.GraphicOverlay
            android:id="@+id/mGraphicOverlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.randolabs.ezequiel.camera2.camera.CameraSourcePreview>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <Button
            android:id="@+id/takePictureButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/take_picture" />
        <Button
            android:id="@+id/videoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/record_video"/>
        <Button
            android:id="@+id/switchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/switch_camera"/>
        <Button
            android:id="@+id/flashButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flash"/>
    </LinearLayout>

    <TextView
        android:id="@+id/cameraVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/cameraOne"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:background="@android:color/black"
        android:layout_marginStart="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/author"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:background="@android:color/black"
        android:layout_marginEnd="10dp" />

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_marginBottom="40dp"
        android:layout_marginStart="10dp"
        android:text="@string/status"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:background="@android:color/black"
        android:layout_marginLeft="10dp" />

    <ImageView
        android:id="@+id/ivAutoFocus"
        android:contentDescription="@null"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/btn_autofocus"
        android:visibility="gone"/>
</FrameLayout>